Fix flickering elements with webkit transform

--- a/app/assets/stylesheets/elements/_img.scss
+++ b/app/assets/stylesheets/elements/_img.scss
@@ -5,8 +5,10 @@
     position: relative;
 
     img {
+        // Fix flicker by isolation with GPU rendering
+        -webkit-transform-style: preserve-3d;
+        -webkit-backface-visibility: hidden;
         position: relative;
         top: -25%;
-        width: 100%;
     }
 }
